# ozon-ai-agent

./: .env.example  .gitignore  CURRENT_STATE.md  ENGINEERING_RULES.md  NEXT_TASK.md  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
docs/: ANALYTICAL_DATA_CENTER_BLUEPRINT.md  AUTONOMOUS_RECOMMENDATION_MEMORY.md  DAILY_PNL_IMPLEMENTATION_PLAN.md  EXPERIMENT_LEARNING_ENGINE.md  FBO_USER_GUIDE.md  LIVE_OZON_INGESTION.md  MANAGEMENT_WORKBOOK_AUDIT.md  MANAGEMENT_WORKBOOK_CORE_MIGRATION.md  MARKETPLACE_KNOWLEDGE_ENGINE.md  MARKETPLACE_RESEARCH.md  MARKET_DECISION_INTEGRATION.md  MARKET_INSIGHT_ENGINE.md  MARKET_KNOWLEDGE_BASE.md  MCP_LAYER.md  MIGRATION_004_SPEC.md  OZON_ALGORITHM_HYPOTHESES.md  OZON_API_SKILL.md  PERFORMANCE_API.md  PHASE1_MIGRATION_PLAN.md  REPO_CONSOLIDATION_PLAN.md  SKILLS.md  VPS_AUTODEPLOY.md  VPS_DEPLOYMENT.md
migrations/: 001_initial_schema.sql  002_recommendations_approval.sql  003_experiments.sql  004_supply_proposals_bigint.sql
scripts/: deploy_vps.sh  rollback_vps.sh  verify_vps.sh
skills/: index.yaml
tests/: test_analytics.py  test_approval_cli.py  test_approval_core.py  test_backtesting.py  test_basic.py  test_client_generator.py  test_client_registry.py  test_client_stubs.py  test_cogs_importer.py  test_cogs_repository.py  test_cogs_service.py  test_competitor_snapshot_ingestion.py  test_confidence_calibration.py  test_db_connection.py  test_decision_cli.py  test_decision_core.py  test_deploy.py  test_deploy_health.py  test_experiment_cli.py  test_experiment_evaluator.py  test_experiment_models.py  test_forecast.py  (+53 more)
(+285 files in other folders)
