[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ozon-agent"
version = "0.1.0"
description = "Ozon AI Agent - autonomous analytics for marketplace"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "httpx>=0.27",
    "pandas>=2.2",
    "polars>=1.0",
    "xgboost>=2.1",
    "lightgbm>=4.4",
    "prophet>=1.1",
    "scikit-learn>=1.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ozon-agent = "ozon_agent.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
